aks/vulnerables/dolevf-dvga/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolevf-dvga
  namespace: vulnerables
spec:
  selector:
    app: vulnerables
    component: dolevf-dvga
  ports:
    - port: 80
      targetPort: 5013
